[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kaquel"
version = "0.3.1"
description = "Tools for handling ElasticSearch queries in various languages"
readme = "README.rst"
homepage = "https://kaquel.touhey.pro/"
repository = "https://gitlab.com/kaquel/kaquel"
authors = ["Thomas Touhey <thomas@touhey.fr>"]
keywords = [
    "elasticsearch",
    "es_query",
    "es-query",
    "kibana",
    "kql",
    "lucene",
    "parsing",
    "query",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
eval-type-backport = { version = "^0.2", markers = "python_version < '3.10'" }
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
sphinx-autobuild = "^2024.4.16"

[tool.poetry.group.docs.dependencies]
furo = "^2024.5.6"
sphinx = "^7.3.7"
sphinxcontrib-mermaid = "^0.9.2"
toml = "^0.10.2"

[tool.black]
target_version = ['py39']
line-length = 79

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
update_changelog_on_bump = true
version = "0.1.4"
version_files = [
    "pyproject.toml:version",
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "@_abstractmethod",
    "pragma: no cover"
]

[tool.flake8]
application-import-names = "kaquel"
ignore = [
    "ANN002", # No type annotations for *args
    "ANN003", # No type annotations for **kwargs
    "ANN101", # No type annotations for self in method
    "ANN102", # No type annotations for cls in classmethod
    "ANN204", # No return type for special method
    "ANN401", # We allow typing.Any in certain annoying cases
    "D105",   # No need for docstrings in magic __methods__
    "D107",   # No need for docstrings in __init__
    "E203",   # flake8 and black disagree on this
    "FI58",   # We use future annotations.
    "W503",   # Line breaks are before binary operators, not after
]
per-file-ignores = [
    "tests/*:S101",
    "docs/*:D100"
]
rst-roles = [
  "py:class",
  "py:attr",
  "py:data",
  "py:func",
  "py:meth",
  "py:exc",
  "py:mod",
  "ref",
]
rst-directives = [
  "py:data",
  "doctest",
]

[tool.isort]
add_imports = ["from __future__ import annotations"]
ensure_newline_before_comments = true
force_grid_wrap = 0
force_sort_within_sections = true
group_by_package = true
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
multi_line_output = 3
no_inline_sort = true
profile = "black"
py_version = 39
use_parentheses = true
combine_as_imports = true

[tool.mypy]
ignore_missing_imports = true
mypy_path = "."
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = """
--cov=kaquel --cov-report html --cov-report term --doctest-modules
--ignore=docs
"""
